--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="nail bottom left"></div>
       <div class="nail bottom right"></div>
 
-      <h1 class="title">My Board Task</h1>
+      <h1 class="title">My Task Board</h1>
 
       <div class="form-bg">
         <form>
